/twitter_account/create.sql
/twitter_terms/create.sql
/tweets/create.sql
/twitter_terms_frequency/create.sql
/twitter_account_type/create.sql
/twitter_account/add_column_twitter_account_type_id.sql
/twitter_account/add_foreign_key_to_twitter_account_type.sql
/twitter_account_state/create.sql
/twitter_terms_frequency/drop_foreign_key_to_twitter_account.sql
/twitter_terms_frequency/drop_column_twitter_account_id.sql
/twitter_terms_frequency/add_column_tweets_id.sql
/twitter_terms_frequency/add_foreign_key_to_tweets.sql
/twitter_terms_frequency/drop_foreign_key_to_calendar_date.sql
/twitter_terms_frequency/drop_column_calendar_date_id.sql
/wastewater_metrics/create.sql
/wastewater_metrics/increase_percentile_change_column.sql
/city/drop_foreign_key_to_county.sql
/city/drop_county_id_column.sql
/county_cities/create.sql
/city/add_fips_column.sql
/city_type/create.sql
/city_type/create_records.sql
/city/add_city_type_id.sql
/city/add_foreign_key_to_city_type.sql
/city/drop_name_unique_index.sql
/city/drop_name_duplicate_unique_index.sql
/city/add_name_fips_unique_index.sql
/city/drop_fips_unique_index.sql
/county_cities/add_county_city_unique_index.sql
/census_tract/create.sql
/block_group/create.sql
/ej_data_field/create.sql
/ej_data_value/create.sql
/county_deaths/create.sql
/metro_area/create.sql
/zipcode/drop_city_id_foreign_key.sql
/zipcode/drop_city_id_column.sql
/city_zipcodes/create.sql
/snap_data/create.sql
/motor_vehicle_collisions/create.sql
/market_application_type/create.sql
/wholesale_market/create.sql
/childcare_type/create.sql
/childcare_center/create.sql
/wholesale_market/increase_public_key_column.sql
/wholesale_market/add_wholesale_date_column_null_constraint.sql
/wholesale_market/remove_effective_date_column.sql
/wholesale_market/remove_disposition_date_column.sql
/wholesale_market/remove_expiration_date_column.sql
/wholesale_market/add_wholesale_account_name_unique_constraint.sql
/wholesale_market/remove_public_id_unique_contraint.sql